# cmake_systemverilog_testbench

project/: CMakeLists.txt
project/env/: CMakeLists.txt  top.sv
project/env/cpu_interface_env/: CMakeLists.txt
project/env/packet_env/: CMakeLists.txt
project/rtl/: CMakeLists.txt
project/script/: CMakeLists.txt  do.tcl
project/sim/: CMakeLists.txt
project/test/: CMakeLists.txt
