ADD_SUBDIRECTORY(cpu_interface_env)
ADD_SUBDIRECTORY(packet_env)

SET(TOP_TB_NAME top PARENT_SCOPE)
SET(TB_ENV_FILES ${CMAKE_CURRENT_SOURCE_DIR}/env.sv PARENT_SCOPE)
SET(TOP_ENV_FILES ${CMAKE_CURRENT_SOURCE_DIR}/top.sv PARENT_SCOPE)

SET(ENV_INC ${CMAKE_CURRENT_SOURCE_DIR} ${CPU_SUBENV_INC} ${PKT_SUBENV_INC} PARENT_SCOPE)

